--- a/templates/table.html
+++ b/templates/table.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
+{% block title %}Standings | CTC Football Pool{% endblock %}
 {% block content %}
-<table class="table-bordered table-striped">
+<h1>Standings</h1>
+<table class="table table-bordered table-striped">
 	<thead>
 		<tr>
 			<th>Name</th>
