--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
         </ul>
-        <h3 class="text-muted">CTC Football Pool</h3>
+        <h3 class="text-muted"><a href="/">CTC Football Pool</a></h3>
       </div>
 
       <div class="row marketing">
@@ -43,7 +43,7 @@
       </div>
 
       <div class="footer">
-        <p>&copy; Company 2014</p>
+        <p></p>
       </div>
 
     </div> <!-- /container -->
